# feedhog

./: .gitignore  Dockerfile  README.md  compose.yaml  config.default.yaml  config.py  fetcher.py  main.py  models.py  prompt.txt  pyproject.toml  state.py  summarizer.py
static/: feedhog.css  feedhog.js
templates/: index.html
